; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_utils.c_nes_free_cqp_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_utils.c_nes_free_cqp_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nes_device = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.nes_cqp_request = type { i32, i64, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@NES_DBG_CQP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"CQP request %p (opcode 0x%02X) freed.\0A\00", align 1
@NES_CQP_WQE_OPCODE_IDX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nes_free_cqp_request(%struct.nes_device* %0, %struct.nes_cqp_request* %1) #0 {
  %3 = alloca %struct.nes_device*, align 8
  %4 = alloca %struct.nes_cqp_request*, align 8
  %5 = alloca i64, align 8
  store %struct.nes_device* %0, %struct.nes_device** %3, align 8
  store %struct.nes_cqp_request* %1, %struct.nes_cqp_request** %4, align 8
  %6 = load i32, i32* @NES_DBG_CQP, align 4
  %7 = load %struct.nes_cqp_request*, %struct.nes_cqp_request** %4, align 8
  %8 = load %struct.nes_cqp_request*, %struct.nes_cqp_request** %4, align 8
  %9 = getelementptr inbounds %struct.nes_cqp_request, %struct.nes_cqp_request* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i64, i64* @NES_CQP_WQE_OPCODE_IDX, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @le32_to_cpu(i32 %14)
  %16 = and i32 %15, 63
  %17 = call i32 @nes_debug(i32 %6, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), %struct.nes_cqp_request* %7, i32 %16)
  %18 = load %struct.nes_cqp_request*, %struct.nes_cqp_request** %4, align 8
  %19 = getelementptr inbounds %struct.nes_cqp_request, %struct.nes_cqp_request* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = load %struct.nes_cqp_request*, %struct.nes_cqp_request** %4, align 8
  %24 = call i32 @kfree(%struct.nes_cqp_request* %23)
  br label %41

25:                                               ; preds = %2
  %26 = load %struct.nes_device*, %struct.nes_device** %3, align 8
  %27 = getelementptr inbounds %struct.nes_device, %struct.nes_device* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i64, i64* %5, align 8
  %30 = call i32 @spin_lock_irqsave(i32* %28, i64 %29)
  %31 = load %struct.nes_cqp_request*, %struct.nes_cqp_request** %4, align 8
  %32 = getelementptr inbounds %struct.nes_cqp_request, %struct.nes_cqp_request* %31, i32 0, i32 0
  %33 = load %struct.nes_device*, %struct.nes_device** %3, align 8
  %34 = getelementptr inbounds %struct.nes_device, %struct.nes_device* %33, i32 0, i32 1
  %35 = call i32 @list_add_tail(i32* %32, i32* %34)
  %36 = load %struct.nes_device*, %struct.nes_device** %3, align 8
  %37 = getelementptr inbounds %struct.nes_device, %struct.nes_device* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = load i64, i64* %5, align 8
  %40 = call i32 @spin_unlock_irqrestore(i32* %38, i64 %39)
  br label %41

41:                                               ; preds = %25, %22
  ret void
}

declare dso_local i32 @nes_debug(i32, i8*, %struct.nes_cqp_request*, i32) #1

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @kfree(%struct.nes_cqp_request*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
